<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gpc_sunset"
    tools:context=".login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="#0E5C89"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_username"/>

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:inputType="textPassword"
            android:backgroundTint="#7B7B7E"
            android:hint="@string/hint_password"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/button_blue"
            android:textColor="@color/button_text"
            android:textSize="@dimen/button_text_size"
            android:layout_marginTop="24dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="26dp"
            android:layout_marginBottom="24dp"
            android:onClick="onLoginClicked"
            android:text="@string/login_button"/>

    </LinearLayout>
</RelativeLayout>