<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gpc_background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="214dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_activity_button_height"
            android:onClick="onChatClicked"
            android:text="@string/chat_button"
            android:textAlignment="textStart"
            android:textColor="@color/text_color"
            android:background="@drawable/bg_button"
            android:drawableStart="@drawable/ic_chat"
            android:paddingStart="@dimen/main_activity_padding_start"
            android:drawablePadding="@dimen/main_activity_drawable_padding"
            android:layout_marginBottom="@dimen/main_activity_button_spacing"
            android:foreground="?selectableItemBackground"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_activity_button_height"
            android:onClick="onLoginClicked"
            android:text="@string/login_button"
            android:textAlignment="textStart"
            android:textColor="@color/text_color"
            android:background="@drawable/bg_button"
            android:drawableStart="@drawable/ic_lock"
            android:paddingStart="@dimen/main_activity_padding_start"
            android:drawablePadding="@dimen/main_activity_drawable_padding"
            android:layout_marginBottom="@dimen/main_activity_button_spacing"
            android:foreground="?selectableItemBackground"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_activity_button_height"
            android:onClick="onAnimationClicked"
            android:text="@string/animation_button"
            android:textAlignment="textStart"
            android:textColor="@color/text_color"
            android:background="@drawable/bg_button"
            android:drawableStart="@drawable/ic_animation"
            android:foreground="?selectableItemBackground"
            android:paddingStart="@dimen/main_activity_padding_start"
            android:drawablePadding="@dimen/main_activity_drawable_padding"
            android:textSize="@dimen/button_text_size" />

    </LinearLayout>

</RelativeLayout>
